2004-06-02  Pascal Obry  <pascal@obry.org>

	* aws-client-xml-input_sources.adb:
	Minor typo fix in comment.

2004-06-02  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-client-xml-input_sources.ads:
	(HTTP_Input): Do not initialize First and Last.

	* aws-client-xml-input_sources.adb:
	(Create): Set First related to Buffer'First.

2004-06-02  Pascal Obry  <pascal@obry.org>

	* aws-client-xml-input_sources.adb:
	Revert part of the previous check-in.
	(Next_Char): Rename Temp to Pos. Add some more comments. This
	 algorithm is quite complex, makes sure that all case are properly
	 documented. It should probably be possible to remove the
	 Clean_Buffer routine, but right now there is still regressions
	 without it. It needs some more work.

2004-06-02  Pascal Obry  <pascal@obry.org>

	* aws-client-xml-input_sources.adb:
	(Eof): Add call to Clean_Buffer removed in previous check-in.
	(Next_Char): Idem. Rewrite part of the algorithm to make it
	 cleaner. Add some comments. Remove not needed used of Temp variable.

2004-06-02  Pascal Obry  <pascal@obry.org>

	* aws-client-xml-input_sources.adb:
	(Clean_Buffer): New procedure.
	(Eof): Call Clean_Buffer after reading data.
	(Next_Char): Call Clean_Buffer after moving or reading data. Ensure
	 that ES.Read won't read garbadge at the end of the buffer.

2004-06-01  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-client-xml-input_sources.adb:
	(Next_Char): Properly set the From.Last on Invalid_Encoding
	 for handling buffer overrun. Do not use Clean_Buffer.

2004-06-01  Pascal Obry  <pascal@obry.org>
	
	* aws-client-xml-input_sources.adb:
	Fix style error introduced in previous check-in.
	
2004-06-01  Pascal Obry  <pascal@obry.org>

	* aws-client-xml-input_sources.adb:
	(Create): Remove Input.EOF initialization.
	Rewrite some comments.
	Minor reformatting.

	* aws-client-xml-input_sources.ads:
	(HTTP_Input): Remove EOF as it is not used.

2004-06-01  Dmitriy Anisimkov <anisimkov@yahoo.com>
